--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mysql2": "^3.6.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
+    "shortid": "^2.2.16",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
